fix(stark-ui): app-data - fixed issues with detail-slot not displayed correctly on small screens
rewrite component to use mat-menu instead of custom implementation

ISSUES CLOSED: #1555

--- a/packages/stark-ui/src/modules/app-data/components/_app-data.component.scss
+++ b/packages/stark-ui/src/modules/app-data/components/_app-data.component.scss
@@ -22,54 +22,42 @@
 /* ------------------------------------------------ */
 /*             app data "dropdown" mode             */
 /* ------------------------------------------------ */
-.stark-app-data.dropdown {
-  position: relative;
-  display: flex;
-  width: 250px;
-  margin-right: 10px;
-  line-height: 1.2;
-  border-radius: 20px;
-  padding: 2px 0 2px 20px;
-
-  & .stark-app-data-summary {
-    padding-top: 4px;
+.stark-app-data {
+  &.dropdown {
+    position: relative;
+    display: flex;
     width: 250px;
+    margin-right: 10px;
+    line-height: 1.2;
+    border-radius: 20px;
+    padding: 2px 0 2px 20px;
+
+    & .stark-app-data-summary {
+      padding-top: 4px;
+      width: 250px;
+    }
+
+    & svg {
+      transition: transform 0.4s;
+    }
+
+    & .is-open svg {
+      transform: rotate(180deg);
+    }
   }
 
-  & svg {
-    transition: transform 0.4s;
-  }
-
-  & .is-open svg {
-    transform: rotate(180deg);
-  }
-
-  & .stark-app-data-detail {
-    position: absolute;
-    top: 100%;
-    width: 250px;
-    right: 0;
-    left: 0;
-    padding: 10px;
-    line-height: 1.5;
-    border-radius: 5px;
-    z-index: 100;
+  &.dropdown-detail {
+    width: 270px;
   }
 }
 
 /* ------------------------------------------------ */
-/*               app data "menu" mode               */
+/*              app data "detail" slot              */
 /* ------------------------------------------------ */
-.stark-app-data.menu {
-  display: block;
-
+.stark-app-data.mat-menu-panel {
   & .stark-app-data-detail {
-    position: absolute;
-    width: 200px;
-    padding: 10px;
+    padding: 2px 10px;
     line-height: 1.5;
-    border-radius: 5px;
-    z-index: 100;
 
     & .label {
       font-weight: 500;
